# Finance-tracker

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
app/: dashboard.py
config/: categories.yaml
finance_tracker/: analysis.py  categorization.py  cleaning.py  enrichment.py  export.py  ingestion.py
tests/: test_analysis.py  test_categorization.py  test_cleaning.py  test_enrichment.py  test_ingestion.py
